force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>You can post your issues here!!!</description>
    <label>Issue</label>
    <nameField>
        <label>Issue</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>