force-app/main/default/objects/Issue__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Please specify the car</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New car</fullName>
            </value>
            <value>
                <fullName>Used car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>