force-app/main/default/objects/Issue__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <description>You can report by writing us and also image can be uploaded!!!</description>
    <label>Report</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>