force-app/main/default/objects/Issue__c/fields/Type_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Issue__c</fullName>
    <description>Please report the issues</description>
    <label>Type of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Over heating engine</fullName>
            </value>
            <value>
                <fullName>Ignition problem</fullName>
            </value>
            <value>
                <fullName>Battery problem</fullName>
            </value>
            <value>
                <fullName>Exhaust system problem</fullName>
            </value>
            <value>
                <fullName>Fuel system problem</fullName>
            </value>
            <value>
                <fullName>Braking system</fullName>
            </value>
            <value>
                <fullName>Digital electronics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>